@@ -57,7 +57,7 @@ class ModuleFacade(types.ModuleType):
         self.__dict__['_impl']  = _impl
         self.__dict__['_guess_file_type'] = _guess_file_type
 
-        self.__dict__['server'] = _impl.AthFileServer()
+        self.__dict__['server'] = _impl.g_server
         
         import atexit
         atexit.register(self.shutdown)
@@ -125,8 +125,28 @@ class ModuleFacade(types.ModuleType):
         of @c AthFile instances.
         """
         if isinstance(fnames, (list, tuple)):
-            return [self.server.fopen(fname, evtmax) for fname in fnames]
+            infos = []
+            for fname in fnames:
+                info = self.server.fopen(fname, evtmax)
+                infos.append(info)
+                pass
+            return infos
         return self.server.fopen(fnames, evtmax)
+
+    @_update_cache  # also decorate with _update_cache to pick-up the changes 
+    @_decos.forking # from the forked athfile server...
+    def pfopen(self, fnames, evtmax=1):
+        """
+        helper function to create @c AthFile instances
+        @param `fnames` name of the file (or a list of names of files) to inspect
+        @param `nentries` number of entries to process (for each file)
+        
+        Note that if `fnames` is a list of filenames, then `fopen` returns a list
+        of @c AthFile instances.
+
+        This is a parallel (multi-threaded) version of ``fopen``.
+        """
+        return self.server.pfopen(fnames, evtmax)
 
     ## def __del__(self):
     ##     self._mgr.shutdown()
