@@ -1,3 +1,11 @@
+2013-09-30  Sebastien Binet  <binet@farnsworth>
+
+	* tagging PyUtils-00-13-11
+	* split fopen into fopen and pfopen (its parallel cousin)
+	* M python/AthFile/__init__.py
+	* M python/AthFile/impl.py
+	* M bin/dump-athfile.py
+
 2013-08-07  Sebastien Binet  <binet@voatlas04.cern.ch>
 
 	* tagging PyUtils-00-13-10
